--- a/src/assets/svgs/icomoon 3/demo-external-svg.html
+++ b/src/assets/svgs/icomoon 3/demo-external-svg.html
@@ -14,18 +14,59 @@
 </div>
 </header>
     <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
+        <h1 class="mvm mtn fgc1">Grid Size: 24</h1>
         <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-arrow-back-outline"><use xlink:href="symbol-defs.svg#icon-arrow-back-outline"></use></svg><span class="name"> icon-arrow-back-outline</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-reply1"><use xlink:href="symbol-defs.svg#icon-reply1"></use></svg><span class="name"> icon-reply1</span>
+            </div>
+        </div>
+  </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 20</h1>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-reply"><use xlink:href="symbol-defs.svg#icon-reply"></use></svg><span class="name"> icon-reply</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-document-text"><use xlink:href="symbol-defs.svg#icon-document-text"></use></svg><span class="name"> icon-document-text</span>
+            </div>
+        </div>
+  </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
+        <div class="glyph fs3">
+            <div class="clearfix pbs">
+                <svg class="icon icon-settings"><use xlink:href="symbol-defs.svg#icon-settings"></use></svg><span class="name"> icon-settings</span>
+            </div>
+        </div>
+        <div class="glyph fs3">
+            <div class="clearfix pbs">
+                <svg class="icon icon-document-text"><use xlink:href="symbol-defs.svg#icon-document-text"></use></svg><span class="name"> icon-document-text</span>
+            </div>
+        </div>
+        <div class="glyph fs3">
+            <div class="clearfix pbs">
+                <svg class="icon icon-star"><use xlink:href="symbol-defs.svg#icon-star"></use></svg><span class="name"> icon-star</span>
+            </div>
+        </div>
+        <div class="glyph fs3">
             <div class="clearfix pbs">
                 <svg class="icon icon-trash-can"><use xlink:href="symbol-defs.svg#icon-trash-can"></use></svg><span class="name"> icon-trash-can</span>
             </div>
         </div>
-        <div class="glyph fs1">
+        <div class="glyph fs3">
             <div class="clearfix pbs">
                 <svg class="icon icon-inbox"><use xlink:href="symbol-defs.svg#icon-inbox"></use></svg><span class="name"> icon-inbox</span>
             </div>
         </div>
-        <div class="glyph fs1">
+        <div class="glyph fs3">
             <div class="clearfix pbs">
                 <svg class="icon icon-inbox-upload"><use xlink:href="symbol-defs.svg#icon-inbox-upload"></use></svg><span class="name"> icon-inbox-upload</span>
             </div>
@@ -33,47 +74,57 @@
   </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-chevron-down-solid"><use xlink:href="symbol-defs.svg#icon-chevron-down-solid"></use></svg><span class="name"> icon-chevron-down-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-gear-solid"><use xlink:href="symbol-defs.svg#icon-gear-solid"></use></svg><span class="name"> icon-gear-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
+            <div class="clearfix pbs">
+                <svg class="icon icon-inbox-solid"><use xlink:href="symbol-defs.svg#icon-inbox-solid"></use></svg><span class="name"> icon-inbox-solid</span>
+            </div>
+        </div>
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-magnifying-glass-solid"><use xlink:href="symbol-defs.svg#icon-magnifying-glass-solid"></use></svg><span class="name"> icon-magnifying-glass-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-paperclip-solid"><use xlink:href="symbol-defs.svg#icon-paperclip-solid"></use></svg><span class="name"> icon-paperclip-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-reply-solid"><use xlink:href="symbol-defs.svg#icon-reply-solid"></use></svg><span class="name"> icon-reply-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-square-caret-down-solid"><use xlink:href="symbol-defs.svg#icon-square-caret-down-solid"></use></svg><span class="name"> icon-square-caret-down-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-star-regular"><use xlink:href="symbol-defs.svg#icon-star-regular"></use></svg><span class="name"> icon-star-regular</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-star-solid"><use xlink:href="symbol-defs.svg#icon-star-solid"></use></svg><span class="name"> icon-star-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
+            <div class="clearfix pbs">
+                <svg class="icon icon-trash-can-solid"><use xlink:href="symbol-defs.svg#icon-trash-can-solid"></use></svg><span class="name"> icon-trash-can-solid</span>
+            </div>
+        </div>
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-user-regular"><use xlink:href="symbol-defs.svg#icon-user-regular"></use></svg><span class="name"> icon-user-regular</span>
             </div>
@@ -81,7 +132,7 @@
   </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 16</h1>
-        <div class="glyph fs3">
+        <div class="glyph fs5">
             <div class="clearfix pbs">
                 <svg class="icon icon-file-text2"><use xlink:href="symbol-defs.svg#icon-file-text2"></use></svg><span class="name"> icon-file-text2</span>
             </div>
