--- a/src/assets/svgs/icomoon 3/demo.html
+++ b/src/assets/svgs/icomoon 3/demo.html
@@ -10,6 +10,27 @@
 <body>
 <svg aria-hidden="true" style="position: absolute; width: 0; height: 0; overflow: hidden;" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
 <defs>
+<symbol id="icon-arrow-back-outline" viewBox="0 0 24 24">
+<path d="M19.164 19.547c-1.641-2.5-3.669-3.285-6.164-3.484v1.437c0 0.534-0.208 1.036-0.586 1.414-0.756 0.756-2.077 0.751-2.823 0.005l-6.293-6.207c-0.191-0.189-0.298-0.444-0.298-0.713s0.107-0.524 0.298-0.712l6.288-6.203c0.754-0.755 2.073-0.756 2.829 0.001 0.377 0.378 0.585 0.88 0.585 1.414v1.704c4.619 0.933 8 4.997 8 9.796v1c0 0.442-0.29 0.832-0.714 0.958-0.095 0.027-0.19 0.042-0.286 0.042-0.331 0-0.646-0.165-0.836-0.452zM12.023 14.011c2.207 0.056 4.638 0.394 6.758 2.121-0.768-3.216-3.477-5.702-6.893-6.080-0.504-0.056-0.888-0.052-0.888-0.052v-3.497l-5.576 5.496 5.576 5.5v-3.499c0 0 0.738 0.010 1.023 0.011z"></path>
+</symbol>
+<symbol id="icon-reply1" viewBox="0 0 24 24">
+<path d="M9.984 9q4.875 0.703 7.523 3.727t3.492 7.289q-3.609-5.109-11.016-5.109v4.078l-6.984-6.984 6.984-6.984v3.984z"></path>
+</symbol>
+<symbol id="icon-reply" viewBox="0 0 20 20">
+<path d="M15 17v-2.99c0-0.003 0-0.006 0-0.010 0-2.209-1.791-4-4-4 0 0-0 0-0 0h-3v5l-6-6 6-6v5h3c3.314 0 6 2.686 6 6v0 3h-2z"></path>
+</symbol>
+<symbol id="icon-document-text" viewBox="0 0 20 20">
+<path d="M12.188 1.875h0.313l3.75 4.375v11.256c0 0.683-0.559 1.244-1.248 1.244h-9.378c-0.692 0-1.248-0.562-1.248-1.255v-14.366c0-0.693 0.56-1.255 1.252-1.255h6.561zM11.875 2.5h-6.253c-0.344 0-0.622 0.285-0.622 0.622v14.381c0 0.344 0.284 0.622 0.625 0.622h9.375c0.345 0 0.625-0.278 0.625-0.621v-10.629h-2.501c-0.69 0-1.249-0.554-1.249-1.254v-3.121zM12.5 2.813v2.807c0 0.348 0.282 0.63 0.623 0.63h2.315l-2.937-3.438zM6.25 6.25v0.625h3.125v-0.625h-3.125zM6.25 4.375v0.625h4.375v-0.625h-4.375zM6.25 8.125v0.625h8.125v-0.625h-8.125zM6.25 10v0.625h6.25v-0.625h-6.25zM6.25 11.875v0.625h8.125v-0.625h-8.125zM6.25 13.75v0.625h5.625v-0.625h-5.625zM6.25 15.625v0.625h8.125v-0.625h-8.125z"></path>
+</symbol>
+<symbol id="icon-settings" viewBox="0 0 32 32">
+<path d="M30.391 12.68l-3.064-0.614c-0.154-0.443-0.336-0.873-0.537-1.289l1.736-2.604c0.529-0.793 0.424-1.85-0.25-2.523l-1.924-1.924c-0.387-0.387-0.898-0.586-1.416-0.586-0.383 0-0.77 0.11-1.107 0.336l-2.604 1.735c-0.418-0.202-0.848-0.382-1.291-0.536l-0.614-3.065c-0.186-0.936-1.008-1.608-1.961-1.608h-2.72c-0.953 0-1.774 0.673-1.961 1.608l-0.614 3.065c-0.443 0.154-0.873 0.335-1.289 0.536l-2.603-1.735c-0.339-0.226-0.725-0.336-1.109-0.336-0.517 0-1.028 0.199-1.415 0.586l-1.923 1.924c-0.674 0.674-0.779 1.73-0.25 2.523l1.735 2.604c-0.202 0.417-0.382 0.847-0.536 1.29l-3.066 0.613c-0.935 0.187-1.608 1.008-1.608 1.961v2.72c0 0.953 0.673 1.775 1.608 1.961l3.065 0.615c0.154 0.443 0.335 0.873 0.536 1.289l-1.734 2.604c-0.529 0.793-0.424 1.85 0.25 2.523l1.924 1.924c0.387 0.387 0.898 0.586 1.415 0.586 0.384 0 0.771-0.111 1.108-0.336l2.604-1.736c0.417 0.203 0.847 0.383 1.29 0.537l0.613 3.064c0.187 0.936 1.008 1.609 1.961 1.609h2.72c0.953 0 1.775-0.674 1.961-1.609l0.615-3.064c0.443-0.154 0.873-0.336 1.289-0.537l2.604 1.736c0.338 0.225 0.725 0.336 1.107 0.336 0.518 0 1.029-0.199 1.416-0.586l1.924-1.924c0.674-0.674 0.779-1.73 0.25-2.523l-1.736-2.604c0.203-0.418 0.383-0.848 0.537-1.291l3.064-0.613c0.935-0.185 1.609-1.008 1.609-1.961v-2.72c0-0.953-0.674-1.774-1.609-1.961zM26.934 17.975c-0.695 0.139-1.264 0.635-1.496 1.305-0.129 0.369-0.279 0.727-0.447 1.074-0.311 0.639-0.258 1.393 0.135 1.982l1.736 2.604-1.924 1.924-2.604-1.736c-0.334-0.223-0.721-0.336-1.109-0.336-0.297 0-0.596 0.066-0.871 0.199-0.348 0.168-0.705 0.32-1.076 0.449-0.668 0.232-1.164 0.801-1.303 1.496l-0.615 3.066h-2.72l-0.613-3.066c-0.139-0.695-0.635-1.264-1.304-1.496-0.369-0.129-0.728-0.279-1.075-0.447-0.276-0.135-0.574-0.201-0.872-0.201-0.389 0-0.775 0.113-1.109 0.336l-2.604 1.736-1.924-1.924 1.735-2.604c0.393-0.59 0.444-1.344 0.137-1.98-0.168-0.348-0.319-0.705-0.448-1.076-0.232-0.668-0.802-1.164-1.496-1.303l-3.065-0.615-0.002-2.721 3.066-0.613c0.694-0.139 1.264-0.635 1.496-1.304 0.129-0.369 0.278-0.728 0.447-1.075 0.31-0.638 0.258-1.392-0.136-1.981l-1.734-2.604 1.923-1.924 2.604 1.735c0.334 0.223 0.721 0.336 1.109 0.336 0.297 0 0.595-0.066 0.871-0.199 0.347-0.168 0.705-0.319 1.075-0.448 0.669-0.232 1.165-0.802 1.304-1.496l0.614-3.065 2.72-0.001 0.613 3.066c0.139 0.694 0.635 1.264 1.305 1.496 0.369 0.129 0.727 0.278 1.074 0.447 0.277 0.134 0.574 0.2 0.873 0.2 0.389 0 0.775-0.113 1.109-0.336l2.604-1.735 1.924 1.924-1.736 2.604c-0.393 0.59-0.443 1.343-0.137 1.98 0.168 0.347 0.32 0.705 0.449 1.075 0.232 0.669 0.801 1.165 1.496 1.304l3.064 0.614 0.003 2.72-3.066 0.614zM16 9.001c-3.865 0-7 3.135-7 7 0 3.866 3.135 7 7 7s7-3.135 7-7c0-3.865-3.135-7-7-7zM16 22.127c-3.382 0-6.125-2.744-6.125-6.125s2.743-6.125 6.125-6.125c3.381 0 6.125 2.743 6.125 6.125 0 3.381-2.744 6.125-6.125 6.125zM16 12.001c-2.21 0-4 1.79-4 4s1.79 4 4 4c2.209 0 4-1.791 4-4s-1.791-4-4-4zM16 19.002c-1.656 0-3-1.344-3-3s1.344-3 3-3 3 1.344 3 3c0 1.656-1.344 3-3 3z"></path>
+</symbol>
+<symbol id="icon-document-text" viewBox="0 0 32 32">
+<path d="M19.5 3h0.5l6 7v18.009c0 1.093-0.894 1.991-1.997 1.991h-15.005c-1.107 0-1.997-0.899-1.997-2.007v-22.985c0-1.109 0.897-2.007 2.003-2.007h10.497zM19 4h-10.004c-0.55 0-0.996 0.455-0.996 0.995v23.009c0 0.55 0.455 0.995 1 0.995h15c0.552 0 1-0.445 1-0.993v-17.007h-4.002c-1.103 0-1.998-0.887-1.998-2.006v-4.994zM20 4.5v4.491c0 0.557 0.451 1.009 0.997 1.009h3.703l-4.7-5.5zM10 10v1h5v-1h-5zM10 7v1h7v-1h-7zM10 13v1h13v-1h-13zM10 16v1h10v-1h-10zM10 19v1h13v-1h-13zM10 22v1h9v-1h-9zM10 25v1h13v-1h-13z"></path>
+</symbol>
+<symbol id="icon-star" viewBox="0 0 32 32">
+<path d="M16 23l9 6-4-10 9-6h-10l-4-10-4 10h-10l9 6-4 10 9-6zM16 21.753l-6.8 4.547 3.2-7.7-7.2-4.6h7.5l3.3-8.5 3.3 8.5h7.5l-7.2 4.6 3.2 7.7-6.8-4.547z"></path>
+</symbol>
 <symbol id="icon-trash-can" viewBox="0 0 32 32">
 <path d="M23 7h4v1h-2v18.993c0 1.671-1.343 3.007-3 3.007h-11c-1.666 0-3-1.346-3-3.007v-18.993h-2v-1h6v-1.995c0-1.111 0.894-2.005 1.997-2.005h5.005c1.102 0 1.997 0.898 1.997 2.005v1.995h2zM9 8v19.005c0 1.102 0.893 1.995 1.992 1.995h11.016c1.1 0 1.992-0.902 1.992-1.995v-19.005h-15zM12 10v17h1v-17h-1zM16 10v17h1v-17h-1zM20 10v17h1v-17h-1zM14.003 4c-0.554 0-1.003 0.443-1.003 0.999v2.001h7v-2.001c0-0.552-0.438-0.999-1.003-0.999h-4.994z"></path>
 </symbol>
@@ -24,6 +45,9 @@
 </symbol>
 <symbol id="icon-gear-solid" viewBox="0 0 32 32">
 <path d="M30.994 10.412c0.2 0.544 0.031 1.15-0.4 1.537l-2.706 2.463c0.069 0.519 0.106 1.050 0.106 1.588s-0.038 1.069-0.106 1.587l2.706 2.462c0.431 0.387 0.6 0.994 0.4 1.538-0.275 0.744-0.606 1.456-0.988 2.144l-0.294 0.506c-0.413 0.688-0.875 1.337-1.381 1.95-0.369 0.45-0.981 0.6-1.531 0.425l-3.481-1.106c-0.837 0.644-1.762 1.181-2.75 1.587l-0.781 3.569c-0.125 0.569-0.563 1.019-1.137 1.113-0.863 0.144-1.75 0.219-2.656 0.219s-1.794-0.075-2.656-0.219c-0.575-0.094-1.012-0.544-1.137-1.113l-0.781-3.569c-0.988-0.406-1.912-0.944-2.75-1.587l-3.475 1.113c-0.55 0.175-1.162 0.019-1.531-0.425-0.506-0.613-0.969-1.262-1.381-1.95l-0.294-0.506c-0.381-0.688-0.713-1.4-0.988-2.144-0.2-0.544-0.031-1.15 0.4-1.538l2.706-2.462c-0.069-0.525-0.106-1.056-0.106-1.594s0.037-1.069 0.106-1.588l-2.706-2.463c-0.431-0.387-0.6-0.994-0.4-1.537 0.275-0.744 0.606-1.456 0.987-2.144l0.294-0.506c0.413-0.688 0.875-1.338 1.381-1.95 0.369-0.45 0.981-0.6 1.531-0.425l3.481 1.106c0.838-0.644 1.762-1.181 2.75-1.587l0.781-3.569c0.125-0.569 0.563-1.019 1.137-1.113 0.863-0.15 1.75-0.225 2.656-0.225s1.794 0.075 2.656 0.219c0.575 0.094 1.012 0.544 1.137 1.113l0.781 3.569c0.988 0.406 1.913 0.944 2.75 1.588l3.481-1.106c0.55-0.175 1.163-0.019 1.531 0.425 0.506 0.612 0.969 1.263 1.381 1.95l0.294 0.506c0.381 0.688 0.712 1.4 0.988 2.144zM16 21c2.762 0 5-2.238 5-5s-2.238-5-5-5-5 2.238-5 5 2.238 5 5 5z"></path>
+</symbol>
+<symbol id="icon-inbox-solid" viewBox="0 0 32 32">
+<path d="M7.563 2c-1.838 0-3.438 1.25-3.881 3.031l-3.563 14.244c-0.081 0.319-0.119 0.644-0.119 0.969v5.756c0 2.206 1.794 4 4 4h24c2.206 0 4-1.794 4-4v-5.756c0-0.325-0.038-0.65-0.119-0.969l-3.563-14.244c-0.444-1.781-2.044-3.031-3.881-3.031h-16.875zM7.563 6h16.875l3 12h-3.2c-0.756 0-1.45 0.425-1.788 1.106l-0.894 1.788c-0.337 0.675-1.031 1.106-1.788 1.106h-7.531c-0.756 0-1.45-0.425-1.787-1.106l-0.894-1.788c-0.338-0.675-1.031-1.106-1.787-1.106h-3.206l3-12z"></path>
 </symbol>
 <symbol id="icon-magnifying-glass-solid" viewBox="0 0 32 32">
 <path d="M26 13c0 2.869-0.931 5.519-2.5 7.669l7.913 7.919c0.781 0.781 0.781 2.050 0 2.831s-2.050 0.781-2.831 0l-7.912-7.919c-2.15 1.575-4.8 2.5-7.669 2.5-7.181 0-13-5.819-13-13s5.819-13 13-13 13 5.819 13 13zM13 22c4.969 0 9-4.031 9-9s-4.031-9-9-9-9 4.031-9 9 4.031 9 9 9z"></path>
@@ -43,6 +67,9 @@
 <symbol id="icon-star-solid" viewBox="0 0 36 32">
 <path d="M19.806 1.125c-0.331-0.688-1.031-1.125-1.8-1.125s-1.462 0.438-1.8 1.125l-4.019 8.269-8.975 1.325c-0.75 0.113-1.375 0.637-1.606 1.356s-0.044 1.512 0.494 2.044l6.513 6.444-1.537 9.106c-0.125 0.75 0.188 1.512 0.806 1.956s1.438 0.5 2.113 0.144l8.019-4.281 8.019 4.281c0.675 0.356 1.494 0.306 2.113-0.144s0.931-1.206 0.806-1.956l-1.544-9.106 6.513-6.444c0.538-0.531 0.731-1.325 0.494-2.044s-0.856-1.244-1.606-1.356l-8.981-1.325-4.019-8.269z"></path>
 </symbol>
+<symbol id="icon-trash-can-solid" viewBox="0 0 28 32">
+<path d="M8.45 1.106c0.338-0.681 1.031-1.106 1.787-1.106h7.525c0.756 0 1.45 0.425 1.788 1.106l0.45 0.894h6c1.106 0 2 0.894 2 2s-0.894 2-2 2h-24c-1.106 0-2-0.894-2-2s0.894-2 2-2h6l0.45-0.894zM2 8h24v20c0 2.206-1.794 4-4 4h-16c-2.206 0-4-1.794-4-4v-20zM8 12c-0.55 0-1 0.45-1 1v14c0 0.55 0.45 1 1 1s1-0.45 1-1v-14c0-0.55-0.45-1-1-1zM14 12c-0.55 0-1 0.45-1 1v14c0 0.55 0.45 1 1 1s1-0.45 1-1v-14c0-0.55-0.45-1-1-1zM20 12c-0.55 0-1 0.45-1 1v14c0 0.55 0.45 1 1 1s1-0.45 1-1v-14c0-0.55-0.45-1-1-1z"></path>
+</symbol>
 <symbol id="icon-user-regular" viewBox="0 0 28 32">
 <path d="M17 19h-6c-6.075 0-11 4.925-11 11 0 1.104 0.896 2 2 2h24c1.104 0 2-0.896 2-2 0-6.075-4.925-11-11-11zM3.062 29c0.494-3.944 3.863-7 7.938-7h6c4.072 0 7.444 3.059 7.938 7h-21.876zM14 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8c0 4.419 3.581 8 8 8zM14 3c2.757 0 5 2.243 5 5s-2.243 5-5 5-5-2.244-5-5c0-2.757 2.244-5 5-5z"></path>
 </symbol>
@@ -61,18 +88,59 @@
 </div>
 </header>
     <div class="clearfix mhl ptl">
-        <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
+        <h1 class="mvm mtn fgc1">Grid Size: 24</h1>
         <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-arrow-back-outline"><use xlink:href="#icon-arrow-back-outline"></use></svg><span class="name"> icon-arrow-back-outline</span>
+            </div>
+        </div>
+        <div class="glyph fs1">
+            <div class="clearfix pbs">
+                <svg class="icon icon-reply1"><use xlink:href="#icon-reply1"></use></svg><span class="name"> icon-reply1</span>
+            </div>
+        </div>
+  </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 20</h1>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-reply"><use xlink:href="#icon-reply"></use></svg><span class="name"> icon-reply</span>
+            </div>
+        </div>
+        <div class="glyph fs2">
+            <div class="clearfix pbs">
+                <svg class="icon icon-document-text"><use xlink:href="#icon-document-text"></use></svg><span class="name"> icon-document-text</span>
+            </div>
+        </div>
+  </div>
+    <div class="clearfix mhl ptl">
+        <h1 class="mvm mtn fgc1">Grid Size: 32</h1>
+        <div class="glyph fs3">
+            <div class="clearfix pbs">
+                <svg class="icon icon-settings"><use xlink:href="#icon-settings"></use></svg><span class="name"> icon-settings</span>
+            </div>
+        </div>
+        <div class="glyph fs3">
+            <div class="clearfix pbs">
+                <svg class="icon icon-document-text"><use xlink:href="#icon-document-text"></use></svg><span class="name"> icon-document-text</span>
+            </div>
+        </div>
+        <div class="glyph fs3">
+            <div class="clearfix pbs">
+                <svg class="icon icon-star"><use xlink:href="#icon-star"></use></svg><span class="name"> icon-star</span>
+            </div>
+        </div>
+        <div class="glyph fs3">
             <div class="clearfix pbs">
                 <svg class="icon icon-trash-can"><use xlink:href="#icon-trash-can"></use></svg><span class="name"> icon-trash-can</span>
             </div>
         </div>
-        <div class="glyph fs1">
+        <div class="glyph fs3">
             <div class="clearfix pbs">
                 <svg class="icon icon-inbox"><use xlink:href="#icon-inbox"></use></svg><span class="name"> icon-inbox</span>
             </div>
         </div>
-        <div class="glyph fs1">
+        <div class="glyph fs3">
             <div class="clearfix pbs">
                 <svg class="icon icon-inbox-upload"><use xlink:href="#icon-inbox-upload"></use></svg><span class="name"> icon-inbox-upload</span>
             </div>
@@ -80,47 +148,57 @@
   </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 0</h1>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-chevron-down-solid"><use xlink:href="#icon-chevron-down-solid"></use></svg><span class="name"> icon-chevron-down-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-gear-solid"><use xlink:href="#icon-gear-solid"></use></svg><span class="name"> icon-gear-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
+            <div class="clearfix pbs">
+                <svg class="icon icon-inbox-solid"><use xlink:href="#icon-inbox-solid"></use></svg><span class="name"> icon-inbox-solid</span>
+            </div>
+        </div>
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-magnifying-glass-solid"><use xlink:href="#icon-magnifying-glass-solid"></use></svg><span class="name"> icon-magnifying-glass-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-paperclip-solid"><use xlink:href="#icon-paperclip-solid"></use></svg><span class="name"> icon-paperclip-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-reply-solid"><use xlink:href="#icon-reply-solid"></use></svg><span class="name"> icon-reply-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-square-caret-down-solid"><use xlink:href="#icon-square-caret-down-solid"></use></svg><span class="name"> icon-square-caret-down-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-star-regular"><use xlink:href="#icon-star-regular"></use></svg><span class="name"> icon-star-regular</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-star-solid"><use xlink:href="#icon-star-solid"></use></svg><span class="name"> icon-star-solid</span>
             </div>
         </div>
-        <div class="glyph fs2">
+        <div class="glyph fs4">
+            <div class="clearfix pbs">
+                <svg class="icon icon-trash-can-solid"><use xlink:href="#icon-trash-can-solid"></use></svg><span class="name"> icon-trash-can-solid</span>
+            </div>
+        </div>
+        <div class="glyph fs4">
             <div class="clearfix pbs">
                 <svg class="icon icon-user-regular"><use xlink:href="#icon-user-regular"></use></svg><span class="name"> icon-user-regular</span>
             </div>
@@ -128,7 +206,7 @@
   </div>
     <div class="clearfix mhl ptl">
         <h1 class="mvm mtn fgc1">Grid Size: 16</h1>
-        <div class="glyph fs3">
+        <div class="glyph fs5">
             <div class="clearfix pbs">
                 <svg class="icon icon-file-text2"><use xlink:href="#icon-file-text2"></use></svg><span class="name"> icon-file-text2</span>
             </div>
