--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 this is just so github pages will work
 
-<a href="">click here to see the app</a>
+<a href="https://kailashganesh.github.io/Umail/dist/">click here to see the app</a>
