added new functions and features

--- a/src/template.html
+++ b/src/template.html
@@ -12,7 +12,7 @@
             <div class="logo-U"></div>
             <span class="">mail</span>
         </div>
-        <p class="heading-md clr-steel">Sparrow(2)</p>
+        <p class="heading-md clr-steel" id="addHeading">Sparrow</p>
         <div class="input">
             <input type="text" class="input__felid">
             <svg class="input__icon">
@@ -34,7 +34,7 @@
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="sprite.svg#icon-inbox"></use>
                             </svg>
-                            <span class="va-middle">Inbox (2)</span>
+                            <span class="va-middle" id="inboxBtnText">Inbox (2)</span>
                         </button>
                     </li>
                     <li class="sidebar__items" >
@@ -66,38 +66,38 @@
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="sprite.svg#icon-trash-can"></use>
                             </svg>
-                            <span class="va-middle">Trash</span>
+                            <span class="va-middle" id="trashBtnText">Trash</span>
                         </button>
                     </li>
 
                     <li class="sidebar__items ">
                         <button class="btn sidebar__btn" id="personalBtn">
                             <span class="tag--personal"></span>
-                            <span class="va-middle">Personal (2)</span>
+                            <span class="va-middle" id="personalBtnText">Personal (2)</span>
                         </button>
                     </li>
                     <li class="sidebar__items ">
                         <button class="btn sidebar__btn" id="clientsBtn">
                             <span class="tag--clients"></span>
-                            <span class="va-middle">Clients</span>
+                            <span class="va-middle" id="clientsBtnText">Clients</span>
                         </button>
                     </li>
                     <li class="sidebar__items ">
                         <button class="btn sidebar__btn" id="familyBtn">
                             <span class="tag--family"></span>
-                            <span class="va-middle">Family (2)</span>
+                            <span class="va-middle" id="familyBtnText">Family (2)</span>
                         </button>
                     </li>
                     <li class="sidebar__items ">
                         <button class="btn sidebar__btn" id="friendsBtn">
                             <span class="tag--friends"></span>
-                            <span class="va-middle">Friends</span>
+                            <span class="va-middle" id="friendsBtnText">Friends</span>
                         </button>
                     </li>
                     <li class="sidebar__items ">
                         <button class="btn sidebar__btn" id="archivesBtn">
                             <span class="tag--archives"></span>
-                            <span class="va-middle">Archives</span>
+                            <span class="va-middle" id="archivesBtnText">Archives</span>
                         </button>
                     </li>
                 </ul>
