--- a/src/template.html
+++ b/src/template.html
@@ -14,7 +14,7 @@
         </div>
         <p class="heading-md clr-steel" id="addHeading">Sparrow</p>
         <div class="input">
-            <input type="text" class="input__felid">
+            <input type="text" class="input__felid" id="searchBar">
             <svg class="input__icon">
                 <use xlink:href="sprite.svg#icon-magnifying-glass-solid"></use>
             </svg>
@@ -30,7 +30,7 @@
                 <ul class="pt-5">
                     <li class="sidebar__items  mb-7 pl-4" id="composeBtn"><button class="btn btn-blue tt-uppercase d-block m-auto">compose</button></li>
                     <li class="sidebar__items">
-                        <button class="btn sidebar__btn" id="inboxBtn">
+                        <button class="btn sidebar__btn" id="inboxBtn" data-type="folder">
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="sprite.svg#icon-inbox"></use>
                             </svg>
@@ -38,7 +38,7 @@
                         </button>
                     </li>
                     <li class="sidebar__items" >
-                        <button class="btn sidebar__btn" id="sentBtn">
+                        <button class="btn sidebar__btn" id="sentBtn" data-type="folder">
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="sprite.svg#icon-inbox-upload"></use>
                             </svg>
@@ -46,7 +46,7 @@
                         </button>
                     </li>
                     <li class="sidebar__items">
-                        <button class="btn sidebar__btn" id="starredBtn">
+                        <button class="btn sidebar__btn" id="starredBtn" data-type="folder">
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="sprite.svg#icon-star"></use>
                             </svg>
@@ -54,7 +54,7 @@
                         </button>
                     </li>
                     <li class="sidebar__items">
-                        <button class="btn sidebar__btn" id="draftsBtn">
+                        <button class="btn sidebar__btn" id="draftsBtn" data-type="folder">
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="sprite.svg#icon-document-text"></use>
                             </svg>
@@ -62,7 +62,7 @@
                         </button>
                     </li>
                     <li class="sidebar__items mb-3">
-                        <button class="btn sidebar__btn" id="trashBtn">
+                        <button class="btn sidebar__btn" id="trashBtn" data-type="folder">
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="sprite.svg#icon-trash-can"></use>
                             </svg>
@@ -71,31 +71,31 @@
                     </li>
 
                     <li class="sidebar__items ">
-                        <button class="btn sidebar__btn" id="personalBtn">
+                        <button class="btn sidebar__btn" id="personalBtn" data-type="tag">
                             <span class="tag--personal"></span>
                             <span class="va-middle" id="personalBtnText">Personal (2)</span>
                         </button>
                     </li>
                     <li class="sidebar__items ">
-                        <button class="btn sidebar__btn" id="clientsBtn">
+                        <button class="btn sidebar__btn" id="clientsBtn" data-type="tag">
                             <span class="tag--clients"></span>
                             <span class="va-middle" id="clientsBtnText">Clients</span>
                         </button>
                     </li>
                     <li class="sidebar__items ">
-                        <button class="btn sidebar__btn" id="familyBtn">
+                        <button class="btn sidebar__btn" id="familyBtn" data-type="tag">
                             <span class="tag--family"></span>
                             <span class="va-middle" id="familyBtnText">Family (2)</span>
                         </button>
                     </li>
                     <li class="sidebar__items ">
-                        <button class="btn sidebar__btn" id="friendsBtn">
+                        <button class="btn sidebar__btn" id="friendsBtn" data-type="tag">
                             <span class="tag--friends"></span>
                             <span class="va-middle" id="friendsBtnText">Friends</span>
                         </button>
                     </li>
                     <li class="sidebar__items ">
-                        <button class="btn sidebar__btn" id="archivesBtn">
+                        <button class="btn sidebar__btn" id="archivesBtn" data-type="tag">
                             <span class="tag--archives"></span>
                             <span class="va-middle" id="archivesBtnText">Archives</span>
                         </button>
