--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Umail</title>
     <link rel="icon" href="favicon.ico" type="image/ico">
-<link href="dist/bundle.css" rel="stylesheet"></head>
+<link rel="icon" href="dist/favicon.ico"><link href="dist/bundle.css" rel="stylesheet"></head>
 <body>
     <header class="header">
         <div class="header__logo">
