--- a/src/template.html
+++ b/src/template.html
@@ -29,8 +29,10 @@
 
         <aside class="sidebar" id="sidebar">
                 <ul class="pt-5">
-                    <li class="sidebar__items  mb-7 pl-4" id="composeBtn"><button class="btn btn-blue tt-uppercase d-block m-auto" id="composeBtn">compose</button></li>
-                    <li class="sidebar__items">
+                    <li class="mb-7 pl-4">
+                        <button class="btn btn-blue tt-uppercase d-block m-auto" id="composeBtn" data-type="compose">compose</button>
+                    </li>
+                    <li>
                         <button class="btn sidebar__btn" id="inboxBtn" data-type="folder">
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="dist/sprite.svg#icon-inbox"></use>
@@ -38,7 +40,7 @@
                             <span class="va-middle" id="inboxBtnText">Inbox (2)</span>
                         </button>
                     </li>
-                    <li class="sidebar__items" >
+                    <li>
                         <button class="btn sidebar__btn" id="sentBtn" data-type="folder">
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="dist/sprite.svg#icon-inbox-upload"></use>
@@ -46,7 +48,7 @@
                             <span class="va-middle">Sent Mail</span>
                         </button>
                     </li>
-                    <li class="sidebar__items">
+                    <li>
                         <button class="btn sidebar__btn" id="starredBtn" data-type="folder">
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="dist/sprite.svg#icon-star"></use>
@@ -54,7 +56,7 @@
                             <span class="va-middle">Starred</span>
                         </button>
                     </li>
-                    <li class="sidebar__items">
+                    <li>
                         <button class="btn sidebar__btn" id="draftsBtn" data-type="folder">
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="dist/sprite.svg#icon-document-text"></use>
@@ -62,7 +64,7 @@
                             <span class="va-middle">Drafts</span>
                         </button>
                     </li>
-                    <li class="sidebar__items mb-3">
+                    <li class="mb-3">
                         <button class="btn sidebar__btn" id="trashBtn" data-type="folder">
                             <svg class="btn__icon va-middle">
                                 <use xlink:href="dist/sprite.svg#icon-trash-can"></use>
@@ -71,31 +73,31 @@
                         </button>
                     </li>
 
-                    <li class="sidebar__items ">
+                    <li>
                         <button class="btn sidebar__btn" id="personalBtn" data-type="tag">
                             <span class="tag--personal"></span>
                             <span class="va-middle" id="personalBtnText">Personal (2)</span>
                         </button>
                     </li>
-                    <li class="sidebar__items ">
+                    <li>
                         <button class="btn sidebar__btn" id="clientsBtn" data-type="tag">
                             <span class="tag--clients"></span>
                             <span class="va-middle" id="clientsBtnText">Clients</span>
                         </button>
                     </li>
-                    <li class="sidebar__items ">
+                    <li>
                         <button class="btn sidebar__btn" id="familyBtn" data-type="tag">
                             <span class="tag--family"></span>
                             <span class="va-middle" id="familyBtnText">Family (2)</span>
                         </button>
                     </li>
-                    <li class="sidebar__items ">
+                    <li>
                         <button class="btn sidebar__btn" id="friendsBtn" data-type="tag">
                             <span class="tag--friends"></span>
                             <span class="va-middle" id="friendsBtnText">Friends</span>
                         </button>
                     </li>
-                    <li class="sidebar__items ">
+                    <li>
                         <button class="btn sidebar__btn" id="archivesBtn" data-type="tag">
                             <span class="tag--archives"></span>
                             <span class="va-middle" id="archivesBtnText">Archives</span>
@@ -103,7 +105,7 @@
                     </li>
                 </ul>
             <div class="btn-group--sqr">
-                <button class="btn" id="settingsBtn">
+                <button class="btn" id="settingsBtn" data-type="settings">
                     <svg class="btn__icon">
                         <use xlink:href="dist/sprite.svg#icon-gear-solid"></use>
                     </svg>
@@ -118,7 +120,7 @@
 
         <main class="wrapper email">
             <ul class="email__list" id="email-list"> </ul>
-            <div class="email__reader" id="email-reader"> </div>
+            <div class="email__reader d-flex flex-direction-col" id="email-reader"> </div>
         </main>
     </div>
 
@@ -143,10 +145,7 @@
             </div>
             <div>
                 <label for="setting_toggle" class="mr-4">Automatically open next email after deleting</label>
-                <select name="open next" id="setting_toggle">
-                    <option value="true">Yes</option>
-                    <option value="false">no</option>
-                </select>
+                <input class="cb2 tgl tgl-ios" type="checkbox" id="setting_toggle">
             </div>
         </div>
     </div>
